--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                     <img class="size-50" src="{% static 'img/featureIcons/1.svg' %}" alt="image">
                     <div class="ml-15">
                         <h4 class="text-18 fw-500">Best Price Guarantee</h4>
-                        <p class="text-15 mt-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p class="text-15 mt-10">We match or beat prices—no hidden fees, no surprises. Sleep sound, save smart.</p>
                     </div>
                 </div>
                 </div>
@@ -43,7 +43,7 @@
                     <img class="size-50" src="{% static 'img/featureIcons/2.svg' %}" alt="image">
                     <div class="ml-15">
                         <h4 class="text-18 fw-500">Easy & Quick Booking</h4>
-                        <p class="text-15 mt-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p class="text-15 mt-10">Book your stay in seconds. No hassle, just clicks and comfort.</p>
                     </div>
                 </div>
                 </div>
@@ -52,7 +52,7 @@
                     <img class="size-50" src="{% static 'img/featureIcons/3.svg' %}" alt="image">
                     <div class="ml-15">
                         <h4 class="text-18 fw-500">Customer Care 24/7</h4>
-                        <p class="text-15 mt-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p class="text-15 mt-10">Day or night, rain or shine—our support team is always just a call or click away.</p>
                     </div>
                 </div>
                 </div>
@@ -66,7 +66,6 @@
                 <div class="col-auto">
                     <div class="sectionTitle -md">
                         <h2 class="sectionTitle__title">Featured Rooms</h2>
-                        <p class="sectionTitle__text mt-5 sm:mt-0">Interdum et malesuada fames ac ante ipsum</p>
                     </div>
                 </div>
             </div>
