--- a/templates/about.html
+++ b/templates/about.html
@@ -35,38 +35,32 @@
                 </div>
             </div>
             <div class="row y-gap-40 justify-between pt-50">
-                <div data-anim-child="slide-up delay-2" class="col-lg-3 col-sm-6">
-                    <div class="featureIcon -type-1 ">
-                        <div class="d-flex justify-center">
-                            <img src="#" data-src="{% static 'img/featureIcons/1.svg' %}" alt="image" class="js-lazy">
-                        </div>
-                        <div class="text-center mt-30">
-                            <h4 class="text-18 fw-500">Best Price Guarantee</h4>
-                            <p class="text-15 mt-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        </div>
+                <div class="col-lg-4 col-md-6">
+                <div class="d-flex pr-30">
+                    <img class="size-50" src="{% static 'img/featureIcons/1.svg' %}" alt="image">
+                    <div class="ml-15">
+                        <h4 class="text-18 fw-500">Best Price Guarantee</h4>
+                        <p class="text-15 mt-10">We match or beat prices—no hidden fees, no surprises. Sleep sound, save smart.</p>
                     </div>
                 </div>
-                <div data-anim-child="slide-up delay-3" class="col-lg-3 col-sm-6">
-                    <div class="featureIcon -type-1 ">
-                        <div class="d-flex justify-center">
-                            <img src="#" data-src="{% static 'img/featureIcons/2.svg' %}" alt="image" class="js-lazy">
-                        </div>
-                        <div class="text-center mt-30">
-                            <h4 class="text-18 fw-500">Easy & Quick Booking</h4>
-                            <p class="text-15 mt-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                <div class="d-flex pr-30">
+                    <img class="size-50" src="{% static 'img/featureIcons/2.svg' %}" alt="image">
+                    <div class="ml-15">
+                        <h4 class="text-18 fw-500">Easy & Quick Booking</h4>
+                        <p class="text-15 mt-10">Book your stay in seconds. No hassle, just clicks and comfort.</p>
                     </div>
                 </div>
-                <div data-anim-child="slide-up delay-4" class="col-lg-3 col-sm-6">
-                    <div class="featureIcon -type-1 ">
-                        <div class="d-flex justify-center">
-                            <img src="#" data-src="{% static 'img/featureIcons/3.svg' %}" alt="image" class="js-lazy">
-                        </div>
-                        <div class="text-center mt-30">
-                            <h4 class="text-18 fw-500">Customer Care 24/7</h4>
-                            <p class="text-15 mt-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                <div class="d-flex pr-30">
+                    <img class="size-50" src="{% static 'img/featureIcons/3.svg' %}" alt="image">
+                    <div class="ml-15">
+                        <h4 class="text-18 fw-500">Customer Care 24/7</h4>
+                        <p class="text-15 mt-10">Day or night, rain or shine—our support team is always just a call or click away.</p>
                     </div>
+                </div>
                 </div>
             </div>
         </div>
@@ -94,7 +88,6 @@
                 <div class="col-auto">
                     <div class="sectionTitle -md">
                         <h2 class="sectionTitle__title">Our Team</h2>
-                        <p class=" sectionTitle__text mt-5 sm:mt-0">Lorem ipsum dolor sit amet</p>
                     </div>
                 </div>
                 <div class="col-auto">
