--- a/templates/blogs/index.html
+++ b/templates/blogs/index.html
@@ -15,7 +15,7 @@
                 <div class="col-auto">
                     <div class="sectionTitle -md">
                         <h2 class="sectionTitle__title">Travel articles</h2>
-                        <p class=" sectionTitle__text mt-5 sm:mt-0">Lorem ipsum is placeholder text commonly used in site.</p>
+                        <p class=" sectionTitle__text mt-5 sm:mt-0">No article yet</p>
                     </div>
                 </div>
             </div>
