Add fallback image handling for missing room images in rooms/index.html

--- a/templates/rooms/index.html
+++ b/templates/rooms/index.html
@@ -58,14 +58,14 @@
                                                         <div class="swiper-wrapper">
                                                             <div class="swiper-slide">
                                                                 <div class="image-square-container">
-                                                                    <img src="{{ room.image.url }}" alt="{{ room.name }}">
+                                                                    <img src="{% if room.image %}{{ room.image.url }}{% else %}{% static 'img/default.png' %}{% endif %}" alt="{{ room.name }}">
                                                                 </div>
                                                             </div>
 
                                                             {% for image in room.images.all %}
                                                                 <div class="swiper-slide">
                                                                     <div class="image-square-container">
-                                                                        <img src="{{ image.image.url }}" alt="{{ room.name }}">
+                                                                        <img src="{% if image.image %}{{ image.image.url }}{% else %}{% static 'img/default.png' %}{% endif %}" alt="{{ room.name }}">
                                                                     </div>
                                                                 </div>
                                                             {% endfor %}
