Add fallback image handling for missing food images in food/show.html

--- a/templates/restaurant/show.html
+++ b/templates/restaurant/show.html
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                         <div class="relative d-flex ml-35">
-                            <img src="{{ food.image.url }}" alt="{{ food.name }}" class="col-12 rounded-4">
+                            <img src="{% if food.image %}{{ food.image.url }}{% else %}{% static 'img/default.png' %}{% endif %}" alt="{{ food.name }}" class="col-12 rounded-4">
                             <div class="absolute d-flex justify-center items-end col-12 h-full z-1 px-35 py-20">
                                 <button class="button h-50 px-25 -blue-1 bg-white text-dark-1 text-14 fw-500 col-12" type="submit">
                                     Order Food
