--- a/templates/blogs/index.html
+++ b/templates/blogs/index.html
@@ -25,7 +25,7 @@
                     <a href="{% url 'base:getBlog' blog.slug %}" class="blogCard -type-1 d-block ">
                         <div class="blogCard__image">
                             <div class="ratio ratio-4:3 rounded-8">
-                            <img class="img-ratio js-lazy" src="#" data-src="{{ blog.image.url }}" alt="image">
+                                <img class="img-ratio js-lazy" src="{% if blog.image %}{{ blog.image.url }}{% else %}{% static 'img/default.png' %}{% endif %}" alt="image">
                             </div>
                         </div>
                         <div class="pt-20">
