--- a/templates/inc/hero.html
+++ b/templates/inc/hero.html
@@ -1,18 +1,24 @@
 {% load static %}
+{% load humanize %}
 
 <section data-anim-wrap class="masthead -type-6">
     <div data-anim-child="fade" class="masthead__bg bg-dark-3">
-        <img src="{% static 'img/hero.jpg' %}" alt="image">
+        <img src="{% if settings.hero_image %}{{ settings.hero_image.url }}{% else %}{% static 'img/default.png' %}{% endif %}" alt="hero image">
     </div>
 
     <div class="container">
         <div class="row justify-center">
             <div class="col-xl-9">
                 <div class="text-center">
-                    <h1 data-anim-child="slide-up delay-4" class="text-48 lg:text-40 md:text-30 text-white">Welcome to B&B MOUNTAIN VIEW</h1>
-                    <p data-anim-child="slide-up delay-5" class="text-white mt-5">Discover amzaing places at exclusive deals</p>
+                    <!-- Dynamically load the hero title and description from settings, fall back to default if not available -->
+                    <h1 data-anim-child="slide-up delay-4" class="text-48 lg:text-40 md:text-30 text-white">
+                        {% if settings.hero_title %}{{ settings.hero_title }}{% else %}Welcome to B&B MOUNTAIN VIEW{% endif %}
+                    </h1>
+                    <p data-anim-child="slide-up delay-5" class="text-white mt-5">
+                        {% if settings.hero_desc %}{{ settings.hero_desc }}{% else %}Discover amazing places at exclusive deals{% endif %}
+                    </p>
                 </div>
             </div>
         </div>
     </div>
-</section>  
+</section>
