--- a/templates/restaurant/index.html
+++ b/templates/restaurant/index.html
@@ -12,18 +12,14 @@
     <!-- Hero Section with Custom Category Filter -->
     <section class="layout-pt-md layout-pb-lg">
         <div class="container">
-            <div class="row justify-center text-center">
-                <div class="col-auto">
+            <div class="row">
+                <div class="col-10">
                     <div class="sectionTitle -md">
                         <h2 class="sectionTitle__title">Our Food</h2>
                         <p class="sectionTitle__text mt-5">Discover your favorite food or drink</p>
                     </div>
                 </div>
-            </div>
-
-            <!-- Category Filter -->
-            <div class="row justify-center text-center pt-20">
-                <div class="col-auto">
+                <div class="col-2">
                     <form method="get" class="filter-form">
                         <div class="input-group input-group-lg">
                             <select name="category" onchange="this.form.submit()" class="form-select form-select-lg">
